--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <header>
+        <h1>Hori<span id="seo">seo</span>n</h1>
+        <nav>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <div class="hero"></div>
-    <div class="content">
+    <main>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" 
             alt="A notebook on a desk with a laptop and pencils. The notebook says SEO, content, backlink, headings, link building, mobile compatibility, and social media."
@@ -53,36 +47,31 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    </main>
+    <section class="sidebar">
+        <aside>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="an icon showing a funnel with a gear at the top and a dollar sign at the bottom"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="an icon showing a person in a suit and tie with a lightbulb for a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="an icon showing a gear and several coins with dollar signs"> </img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+        </aside>
+    </section>
+
 </body>
 
 </html>
