completed consolidation of css sections by creating one class in html for the main content, added comments to css

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+
+    <div class="hero-image"></div>
+
     <main>
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="services">
             <img src="./assets/images/search-engine-optimization.jpg" 
-            alt="A notebook on a desk with a laptop and pencils. The notebook says SEO, content, backlink, headings, link building, mobile compatibility, and social media."
+            alt="An open notebook on a desk with a laptop and pencils. The page says SEO, content, backlink, headings, link building, mobile compatibility, and social media."
             class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="services">
             <img src="./assets/images/online-reputation-management.jpg" 
             alt="A person holding a phone in front of a laptop. The laptop screen shows the word Reputation with a red background and several colorful graphs"
             class="float-right" />
@@ -37,8 +39,8 @@
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="services">
             <img src="./assets/images/social-media-marketing.jpg" 
             alt="People around a table covered in a variety of colorful social media icons and phrases, such as a camera, music note, tweet, like, and share" 
             class="float-left" />
@@ -46,8 +48,9 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
+    
     <section class="sidebar">
         <aside>
             <h3>Lead Generation</h3>
